--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -12,9 +12,9 @@
     <a href="{% url 'logoutuser' %}"><button class="logout-btn">Logout</button></a>
 </header> {% endcomment %}
 
-<div class="header-main " style="z-index: 2;">
+<div class="header-main5" style="z-index: 2;">
     <nav class="navbar navbar-dark navbar-expand-md ">
-        <div class="container-fluid">
+        <div class="container-fluid" >
          
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item ">
-                <a class="nav-link active" aria-current="page" href="{% url "dashboard" %}">Dashboard</a>
+                <a class="nav-link " aria-current="page" href="{% url "dashboard" %}">Dashboard</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="{% url "patienttable" %}">Patients</a>
