--- a/website/static/style.css
+++ b/website/static/style.css
@@ -159,8 +159,17 @@ header li,a,strong, button {
     color: #edf0f1 ;  
     padding: 10px;
     font-size: 13px;
+    background: #1dd1a1;
+ 
+}
+
+.title-form5{
+    border-radius: 5px 5px 0 0;
+    color: #edf0f1 ;  
+    padding: 10px;
+    font-size: 13px;
     background: rgb(0,135,97);
-    background: linear-gradient(90deg, rgba(0,135,97,0.8) 0%, rgba(59,178,113,0.49343487394957986) 100%);
+    background: linear-gradient(90deg, rgba(0,135,97,1) 0%, rgba(59,178,113,0.8) 100%);
 }
 
 .title-form2{
@@ -755,7 +764,7 @@ datalist{
     margin: 0px;
     padding: 10px 5px;
     background-color: white;
-    border-bottom: 20px  solid rgba(1,136,97,1) ;
+    border-bottom: 5px  solid rgba(1,136,97,1) ;
 
 }
 
