--- a/website/templates/compareitem1.html
+++ b/website/templates/compareitem1.html
@@ -1,6 +1,8 @@
 {% load static %}
 <div class="add_medicalhistorytable">
-
+  
+  <h2>Medical History</h2>
+  <hr class="border border-success border-2 opacity-50">
     <label class="lbl-pname5">CONSULTATION DATE/TIME</label><br />
 
     <label class="value-pname">{{patient_history.created_at}} </label>
@@ -57,18 +59,19 @@
     <label class="value-pname">{{patient_history.objectives}} </label>
 </div>
          
-      
+<h2>Medication/Prescription</h2>
+<hr class="border border-success border-2 opacity-50">
 
                 <!--PATIENT PRESCRIPTION TABLE-->
-                <div class="medicalhistorytable">
-                  <table id="table-medications" class="table table-sm table-bordered content-table">
+                <div class="medicalhistorytablsae ml-2 mr-2 mb-5">
+                  <table id="table-medicationss" class="table table-sm table-bordered content-table">
                     <thead class="table-success bg-gradient">
                       <tr>
                         <th rowspan="2">Quantity</th>
                         <th rowspan="2">Medication/Preparation</th>
                         <th rowspan="2">Dosage</th>
                         <th colspan="3">Schedule of Intake</th>
-                        <th rowspan="2">Actions</th>
+                    
                       </tr>
                       <tr>
                         <th>7:00 AM</th>
@@ -86,13 +89,7 @@
                         <td>{{medrecord.morning}}</td>
                         <td>{{medrecord.noon}}</td>
                         <td>{{medrecord.evening}}</td>
-                        <td>
-
-                          <a href="{% url "deleteitemprescription" patient_record.id medrecord.id patient_history.id %}" style="padding:0 10px;margin:0;"
-                            name="delete_presciption_item" type='submit' value="{{medrecord.id}}" id="link-delete">
-                            <i class="bi bi-trash3"></i></a>
-
-                        </td>
+                       
                       </tr>
                       {% endfor %}
                       {% else %}
@@ -103,96 +100,19 @@
                 </div>
                 <!--end of PATIENT PRESCRIPTION TABLE-->
 
-                <!-- Modal -->
-                    <div class="modal fade sm" id="print_report" data-bs-backdrop="static" tabindex="-1" aria-labelledby="print_report"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-
-                      <div class="modal-content">
-                        <div class="title-form">Print Prescription</div>
-                        <form action="" method="POST" target="_blank">
-                          {% csrf_token %}
-
-                          <div class="form-check m-4">
-                            <input name="sigchecked" class="form-check-input" type="checkbox" value="with signature"
-                              id="flexCheckChecked" checked>
-                            <label class="form-check-label" for="flexCheckChecked">
-                              with signature
-                            </label>
-                          </div>
-
-                          <div class="reg-row">
-                            <div class="medicine-col" align="right" style="margin-bottom:15px;">
-
-                              <button class="btn-save" type="submit" name="print_prescription">Print</button>
-                              <button style="margin-right:20px;" type="button" class="btn btn-secondary"
-                                data-bs-dismiss="modal">Close</button>
-
-                            </div>
-                          </div>
-                        </form>
-                      </div>
-
-                    </div>
-                  </div>
-
-                  <div class="modal fade sm" id="searchmedicine" data-bs-backdrop="static" tabindex="-1" aria-labelledby="print_report"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-lg modal-dialog-centered" >
-
-                      <div class="modal-content">
-                        <div class="title-form2">
-                       
-                          <span><i class="bi bi-search"></i> &nbsp Search Medicine</span>  
-                          <span class="close_button"> <a href="" data-bs-dismiss="modal" class="btn btn-danger btn-sm">CLOSE</a></span></div>
-                      
-                        <div class="m-3">
-
-                          <!--MEDICINES TABLE-->
-                          <table id="medicine-table" class="medicine-tables content-table ">
-                            <thead>
-
-                              <th>Medicine Name</th>
-                              <th>Generic Name</th>
-                              <th>Dosage</th>
-                              <th>Actions</th>
-                            </thead>
-
-                            <tbody>
-                              {% for meds in medicinedata %}
-                              <tr>
-
-                                <td>{{meds.medname}}</td>
-                                <td>{{meds.medgenname}}</td>   
-                                <td>{{meds.medsize}}</td> 
-                                <td id="actions_cell">
-
-                                  <form action="{% url "patientmedinfo_medications" pID patient_history.id meds.id%}" method="POST">
-                                    {% csrf_token %}
-                                    <button type='submit' name="select_medicine" id="link-select">select medicine</button>
-                                  </form>
-                                </td>
-                              </tr>
-                              {% endfor %}
-
-                            </tbody>
-
-                          </table>
-
-                          </form>
-
-                        </div>
-                      </div>
-
-                    </div>
-
-                  </div>
-
+              
             <!-- END OF PRESCRIPTION FORM-->
 
+            <h2 class="mt-3">Files/Attachments</h2>
+            <hr class="border border-success border-2 opacity-50">
             {% if patient_history_attachments %}
             {% for a in  patient_history_attachments%}
+            <center> {{a.name}}</center>
+            <a class="" id="link-viesw" type="button" href="{{a.fileattachments.url}}" target="_blank">
+            
             <img src="{{a.fileattachments.url}}" width="100%"> </img>
+          </a>
+           
 
             {% endfor %}
             {% endif %}
