--- a/website/templates/editmedhistory.html
+++ b/website/templates/editmedhistory.html
@@ -24,6 +24,23 @@
     <textarea id="id_bp" class="reg-input" cols="100%" name="bps" required>{{patient_history.bp}}</textarea>
     {% comment %} <label class="value-pname">{{patient_history.diagnosis}} </label> {% endcomment %}
 </div>
+<div class="add_medicalhistorytable">   
+    <label class="lbl-pname">Weight</label><br />
+    <textarea id="id_weight" class="reg-input" cols="100%" name="weight" required>{{patient_history.weight}}</textarea>
+    {% comment %} <label class="value-pname">{{patient_history.diagnosis}} </label> {% endcomment %}
+</div>
+
+<div class="add_medicalhistorytable">   
+    <label class="lbl-pname">Height</label><br />
+    <textarea id="id_height" class="reg-input" cols="100%" name="height" required>{{patient_history.height}}</textarea>
+    {% comment %} <label class="value-pname">{{patient_history.diagnosis}} </label> {% endcomment %}
+</div>
+
+<div class="add_medicalhistorytable">   
+    <label class="lbl-pname">Temperature</label><br />
+    <textarea id="id_bodytemp" class="reg-input" cols="100%" name="bodytemp" required>{{patient_history.bodytemp}}</textarea>
+    {% comment %} <label class="value-pname">{{patient_history.diagnosis}} </label> {% endcomment %}
+</div>
 
 <div class="add_medicalhistorytable">
     <label class="lbl-pname">COMMON CONCERN</label><br />
