--- a/website/templates/patientlist.html
+++ b/website/templates/patientlist.html
@@ -14,12 +14,12 @@
       </div>
     </div>
 
-    <!--Table container-->
+    {% comment %} <!--Table container-->
     <div class="container2">
       <div class="title-form">Patient List</div>
       <div class="table-box">
         {% include 'patientstable.html' %}
       </div>
-</div>
+</div> {% endcomment %}
 
 {%endblock%}
