--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load custom_tags %}
  {% block pagetitle %} Dashboard{% endblock pagetitle%}  
  
  {% block content%}
@@ -52,6 +53,7 @@
                     <th>Common Concern</th>
                     <th>Diagnosis</th>
                     <th>Date/Time</th>
+                    <th>Actions</th>
                 </thead>
                 {% for x in consultationtable %}
                     <tr>
@@ -59,6 +61,11 @@
                         <td>{{x.remarks}}</td>
                         <td>{{x.diagnosis}}</td>
                         <td>{{x.created_at}}</td>
+                        <td>
+                            {% getPatientID x.patient_code as pcode %}
+                            <a href="{% url "patientmedinfo_geninfo" pcode x.id%}" id="link-view"><i class="bi bi-eye"></i> Open</a>
+                           
+                        </td>   
                     </tr>
                 {% endfor %}
             </table>
