--- a/website/templates/pdfreport.html
+++ b/website/templates/pdfreport.html
@@ -119,7 +119,7 @@
       <br>
       <div class="inline_row">
        
-        <h1 class="h1bold">LABAGUIS NEURO CLINIC@MEGH</h1>
+        <h1 class="h1bold"> LABAGUIS NEURO CLINIC@MEGH</h1>
         <h2>Medical Arts Bldg. Highway, Tawiran</h2>
         Monday to Saturday (6am : 12nn) 
         Contact Numbers: 286-7388 or 286-7386 Local # 373 | (09399018400/ 09173233648)
@@ -187,9 +187,9 @@
     </tbody>
    
   </table>  
-
+ 
  <p style="font-size:12px;margin-top:30px"> <b> Note:</b> <i>Report to us if any allergic/undesirable side effects of any medication, ASAP</i></p>
-<p style="font-size:12px;margin-top:50px">YOUR NEXT APPOINTMENT: <br>________________________<br>________________________</p>
+<p style="font-size:12px;margin-top:50px">YOUR NEXT APPOINTMENT: <u>{{nextappointment}}</u>
 <p  style="font-size:12px;margin-left:450px"><b>&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp<img src="{{static_url}}{{signature}}" width="100px" height="100px"></img><br>ZERNAN S. LABAGUIS, MD FPNA</b><br>PRC:  90136<br>PTR:  0851827</p>
 </body>
 
